--- a/templates/basic.html
+++ b/templates/basic.html
@@ -15,7 +15,7 @@
         <link href="{% static 'less/custom/master.less' %}" rel="stylesheet" type="text/less">
     {% endcompress %}
 
-    <link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -69,11 +69,11 @@
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 {% compress js %}
     <script src="{% static 'js/vendor/bootstrap-3.3.5/bootstrap.js' %}"></script>
-    <script src="{% static 'js/custom/lucie.js' %}"><</script>
-
+    <script src="{% static 'js/custom/lucie.js' %}"></script>
     {% block scripts %}
-
     {% endblock %}
 {% endcompress %}
+
+
 </body>
 </html>
